2003-03-17  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ru" (Russian).

2003-03-16  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2003-03-14  Yuriy Syrota <rasta renome.rovno.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2003-03-08  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added "pt_BR" (Brazilian Portuguese) to ALL_LINGUAS.

2003-03-05  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added "pt" to ALL_LINGUAS.

2003-03-03  James Antill  <james@and.org>

	* src/tetrinet.c (tetrinet_sendfield): Put a warning in if blocks are
	out of range.
	(tetrinet_old_sendfield): Add checking code

2003-02-24  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (stop_list): list_issued is a integer, changed
	accordingly.
	(partyline_update_channel_list): if there is another channel list
	update in progress, do nothing. This will prevent us from being
	kicked from the server because of flood.
	
	* src/tetrinet.c (tetrinet_inmessage): fixed the stupid bug that 
	prevented the channel list from working in tetrinet.org.

2003-02-22  ChipX86 <chipx86@chipx86.com>

	* gtetrinet.schemas.in: Add schema info. for timestamp pref.
	* src/config.c: Add config for timestamping partyline text.
	* src/config.h: Add config for timestamping partyline text.
	* src/dialogs.c: Add config for timestamping partyline text.
	* src/gtetrinet.c: Add config for timestamping partyline text.
	* src/partyline.c: Add timestamps if config is set.
	* src/partyline.h: Add config for timestamping partyline text.

2003-02-22  James Antill  <james@and.org>

	* src/config.c (config_loadtheme): If current theme has no name,
	revert to default.

	* src/fields.c (fields_init): If the current theme fails to load,
	change the preference.

2003-02-20  Jordi Mallach  <jordi@sindominio.net>

	* src/tetrinet.c (tetrinet_sendfield): Patch from Ian Zink with big
	optimizations.
