@@ -35,4 +35,4 @@ The GTetrinet homepage is at
 
 http://gtetrinet.sourceforge.net/
 
-E-Mail suggestions, bug reports, etc to kswong@zip.com.au
+E-Mail suggestions, bug reports, etc. to gtetrinet-list@gnome.org.
