@@ -3,10 +3,6 @@ GTetrinet's TODO list
 
 - Get server list from http://www.tetrinet.org/ip/ (see #104323)
 
-- GNOME2 port issues:
-  + detaching and reattaching the Menu Bar causes two Bonobo-CRITICAL
-  + if you use the C locale and input an 8bit character, gtetrinet segfaults
-
 - Make gtetrinet resizeable (at least the fields messages bit)
 
 - Hide mouse cursor when game is in progress
